[package]
name = "Project"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = {version = "0.17.0", features = ["rand"] }
tokio = "1.9.0"
secp256k1 = {version = "0.20.3", features = ["rand"] }
tiny-keccak = "2.0.2"
anyhow = "1.0.42"
fltk = { version = "^1.1", git = "https://github.com/fltk-rs/fltk-rs" }